<resources>
    <string name="app_name">Finance</string>
    <string name="text">Text</string>
    <string name="adding">Добавление</string>
    <string name="addBalance">Добавить баланс</string>
    <string name="amount">Сумма</string>
    <string name="contact_name">Имя контакта</string>
    <string name="comment">Комментарий</string>
    <string name="Cancel">ОТМЕНА</string>
    <string name="minus">МИНУС</string>
    <string name="plus">ПЛЮС</string>
    <string name="you_have_not_inputted_name">Не введено имя, нечего добавлять</string>
    <string name="add">Добавить</string>
    <string name="repay_full_amount">Погасить всю сумму</string>
    <string name="edit_balance">Изменить баланс</string>
    <string name="rename">Переименовать</string>
    <string name="delete_contact">Удалить контакт</string>
    <string name="change_name">Изменить</string>
    <string name="rename_noun">Переименование</string>
    <string name="overall">Общий</string>
    <string name="about">О программе</string>
    <string name="about_detail">Записная книжка, призванная стать помощником в учёте долгов и займов.</string>
    <string name="version">Версия: 1.0</string>
    <string name="contacts_to_connect">Пожелания и баги? Свяжитесь с разработчиком mr.amirniyaz3010@gmail.com</string>
</resources>
