<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/dialog_min_width"
        android:layout_height="wrap_content"
        tools:context=".ui.dialog.AboutDialog">
        <TextView
                android:id="@+id/txAbout"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="@dimen/twenty_text_size"
                android:textColor="@color/blackish"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/margin_standard"/>
        <TextView
                android:id="@+id/txAboutDetail"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txAbout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/about_detail"
                android:textColor="@color/blackish"
                android:textSize="@dimen/fourteen_text_size"
                android:layout_margin="@dimen/margin_standard"/>
        <TextView
                android:id="@+id/txVersion"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:text="@string/version"
                app:layout_constraintTop_toBottomOf="@+id/txAboutDetail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/margin_standard"
                android:textSize="@dimen/fourteen_text_size"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txContactUs"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txVersion"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/contacts_to_connect"
                android:textSize="@dimen/fourteen_text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_standard"/>
</android.support.constraint.ConstraintLayout>