<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dialog_min_width">

    <TextView
            android:id="@+id/addTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/adding"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

    <EditText
            android:id="@+id/newContactName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/addTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:hint="@string/contact_name"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="text"
            android:autofillHints="@string/contact_name"
            tools:ignore="UnusedAttribute"/>

    <CheckBox
            android:id="@+id/checkBoxId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/newContactName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:id="@+id/addBalanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBalance"
            app:layout_constraintTop_toTopOf="@+id/checkBoxId"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxId"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxId"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addBalanceTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/additionLayout"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            >

        <ImageView
                android:id="@+id/moneyId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintRight_toLeftOf="@+id/amountId"
                android:layout_marginStart="16dp"/>

        <EditText
                android:id="@+id/amountId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/moneyId"
                android:textSize="16sp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"/>

        <EditText
                android:id="@+id/commentId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/comment"
                app:layout_constraintTop_toBottomOf="@+id/amountId"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Cancel"
                android:textColor="@color/colorPrimary"
                android:id="@+id/cancelButton"
                app:layout_constraintTop_toBottomOf="@+id/commentId"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="@string/minus"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/commentId"
                app:layout_constraintRight_toLeftOf="@id/plusButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="@dimen/margin_standard"/>

        <TextView
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/plus"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/commentId"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/margin_standard"
                android:textSize="14sp"
                android:layout_marginRight="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addBalanceTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/addButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/cancelButton1"
                android:textStyle="bold"
                android:text="@string/Cancel"
                android:background="#fff"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/margin_standard"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>

        <TextView
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAllCaps="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_standard"
                />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>