<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dialog.edit.EditContact"
        android:minWidth="300dp">
        <TextView
                android:id="@+id/editBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_balance"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/blackish"
                android:layout_margin="@dimen/margin_standard"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        <TextView
                android:id="@+id/oldName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editBalance"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/overall"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"/>
        <TextView
                android:id="@+id/balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editBalance"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/oldName"
                android:text="123"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"/>
        <LinearLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/silver"
                app:layout_constraintTop_toBottomOf="@+id/oldName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_standard"/>
        <ImageView
                android:id="@+id/moneyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                app:layout_constraintRight_toLeftOf="@id/etAmount"
                android:layout_marginStart="@dimen/margin_standard"
                android:paddingTop="8dp"/>

        <EditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintLeft_toRightOf="@id/moneyImage"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"/>
        <EditText
                android:id="@+id/etComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/comment"
                app:layout_constraintTop_toBottomOf="@+id/etAmount"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"/>
        <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/silver"
                app:layout_constraintTop_toBottomOf="@+id/etComment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_standard"/>
        <TextView
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/Cancel"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"/>

        <TextView
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="@string/minus"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:layout_constraintRight_toLeftOf="@id/plusButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>
        <TextView
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:text="@string/plus"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>
</android.support.constraint.ConstraintLayout>