<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="280dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
                android:id="@+id/oldName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="@dimen/margin_standard"
                app:layout_constraintRight_toRightOf="parent"/>
        <EditText
                android:id="@+id/newName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:hint="@string/contact_name"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/oldName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        <TextView
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/newName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_small"
                android:textAllCaps="true"
                android:padding="@dimen/margin_small"
                android:textColor="@color/colorPrimary"
                android:text="@string/rename"
                android:layout_marginEnd="@dimen/margin_small"/>
        <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/newName"
                app:layout_constraintRight_toLeftOf="@+id/okBtn"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:text="@string/Cancel"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/margin_standard"
                app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>